base/deploy-test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-test
  namespace: test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-test
  template:
    metadata:
      labels:
        app: nginx-test
    spec:
      containers:
      - name: nginx-test
        image: 440744220626.dkr.ecr.ap-northeast-2.amazonaws.com/test:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
