base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: "nginx-test-ingress"
    namespace: test
    annotations:
      alb.ingress.kubernetes.io/scheme: internet-facing
      alb.ingress.kubernetes.io/target-type: ip
      alb.ingress.kubernetes.io/group.name: shared-alb
      alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:440744220626:certificate/b54855ea-0755-400b-871f-7e4c740cd142
spec:
    ingressClassName: alb
    rules:
    - host: test.mzc-ijw.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "nginx-test"
                port:
                  number: 80
